--- a/TeamB04.vcxproj.filters
+++ b/TeamB04.vcxproj.filters
@@ -150,11 +150,14 @@
     <ClCompile Include="GameOverScene.cpp">
       <Filter>ソース ファイル\Scenes</Filter>
     </ClCompile>
-      <ClCompile Include="ParticleManager.cpp">
+    <ClCompile Include="ParticleManager.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="Particle.cpp">
       <Filter>ソース ファイル\Actors</Filter>
+    </ClCompile>
+    <ClCompile Include="Fade.cpp">
+      <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -290,11 +293,14 @@
     <ClInclude Include="GameOverScene.h">
       <Filter>ヘッダー ファイル\Scenes</Filter>
     </ClInclude>
-      <ClInclude Include="ParticleManager.h">
+    <ClInclude Include="ParticleManager.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="Particle.h">
       <Filter>ヘッダー ファイル\Actors</Filter>
+    </ClInclude>
+    <ClInclude Include="Fade.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
