--- a/TeamB04.vcxproj
+++ b/TeamB04.vcxproj
@@ -230,6 +230,10 @@
     <ClInclude Include="UI.h" />
     <ClInclude Include="World.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Paladin.frag" />
+    <None Include="Paladin.vert" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
