--- a/TeamB04.vcxproj.filters
+++ b/TeamB04.vcxproj.filters
@@ -303,4 +303,12 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Paladin.frag">
+      <Filter>リソース ファイル</Filter>
+    </None>
+    <None Include="Paladin.vert">
+      <Filter>リソース ファイル</Filter>
+    </None>
+  </ItemGroup>
 </Project>
