ゲームプレイBGM変更

--- a/TeamB04.vcxproj
+++ b/TeamB04.vcxproj
@@ -231,6 +231,8 @@
     <ClInclude Include="World.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Ghost.frag" />
+    <None Include="Ghost.vert" />
     <None Include="Paladin.frag" />
     <None Include="Paladin.vert" />
   </ItemGroup>
