--- a/TeamB04.vcxproj.filters
+++ b/TeamB04.vcxproj.filters
@@ -310,5 +310,11 @@
     <None Include="Paladin.vert">
       <Filter>リソース ファイル</Filter>
     </None>
+    <None Include="Ghost.vert">
+      <Filter>リソース ファイル</Filter>
+    </None>
+    <None Include="Ghost.frag">
+      <Filter>リソース ファイル</Filter>
+    </None>
   </ItemGroup>
 </Project>
