--- a/TeamB04.vcxproj.filters
+++ b/TeamB04.vcxproj.filters
@@ -177,6 +177,9 @@
     <ClCompile Include="HPBar.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="ClearObj.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ActorManager.h">
@@ -333,6 +336,9 @@
       <Filter>ヘッダー ファイル\Actors</Filter>
     </ClInclude>
     <ClInclude Include="HPBar.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="ClearObj.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
