--- a/TeamB04.vcxproj
+++ b/TeamB04.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="MapGenerator.cpp" />
     <ClCompile Include="EnemyTestScene.cpp" />
     <ClCompile Include="GamePlayScene.cpp" />
+    <ClCompile Include="PaladinSpawn.cpp" />
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="ParticleManager.cpp" />
     <ClCompile Include="player_ghost.cpp" />
@@ -210,6 +211,7 @@
     <ClInclude Include="MapGenerator.h" />
     <ClInclude Include="EnemyTestScene.h" />
     <ClInclude Include="GamePlayScene.h" />
+    <ClInclude Include="PaladinSpawn.h" />
     <ClInclude Include="Particle.h" />
     <ClInclude Include="ParticleManager.h" />
     <ClInclude Include="player_ghost.h" />
