--- a/TeamB04.vcxproj.filters
+++ b/TeamB04.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClCompile Include="HPBar.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="PaladinSpawn.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ActorManager.h">
@@ -331,6 +334,9 @@
     </ClInclude>
     <ClInclude Include="ClearObj.h">
       <Filter>ヘッダー ファイル\Actors</Filter>
+    </ClInclude>
+    <ClInclude Include="PaladinSpawn.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
