--- a/TeamB04.vcxproj
+++ b/TeamB04.vcxproj
@@ -91,6 +91,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>.\src;.\src\actor;.\src\collider;.\src\scene;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -103,6 +104,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>.\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -118,6 +120,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <WholeProgramOptimization>false</WholeProgramOptimization>
+      <AdditionalIncludeDirectories>.\src;.\src\actor;.\src\collider;.\src\scene;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -134,6 +137,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>.\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -143,103 +147,103 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Actor.cpp" />
-    <ClCompile Include="ActorManager.cpp" />
-    <ClCompile Include="AnimatedMesh.cpp" />
-    <ClCompile Include="AttackCollider.cpp" />
-    <ClCompile Include="BossTestScene.cpp" />
-    <ClCompile Include="BoundingSphere.cpp" />
-    <ClCompile Include="ByteBuf.cpp" />
-    <ClCompile Include="Camera.cpp" />
-    <ClCompile Include="CSVReader.cpp" />
-    <ClCompile Include="DeathSmoke.cpp" />
-    <ClCompile Include="EPsycokinesisBullet.cpp" />
-    <ClCompile Include="ESurogSakones.cpp" />
-    <ClCompile Include="Fade.cpp" />
-    <ClCompile Include="GameOverScene.cpp" />
-    <ClCompile Include="HPBar.cpp" />
-    <ClCompile Include="interact_collider.cpp" />
-    <ClCompile Include="MapGenerator.cpp" />
-    <ClCompile Include="EnemyTestScene.cpp" />
-    <ClCompile Include="GamePlayScene.cpp" />
-    <ClCompile Include="PaladinSpawn.cpp" />
-    <ClCompile Include="Particle.cpp" />
-    <ClCompile Include="ParticleManager.cpp" />
-    <ClCompile Include="player_ghost.cpp" />
-    <ClCompile Include="player_paladin.cpp" />
-    <ClCompile Include="NormalGhost.cpp" />
-    <ClCompile Include="PlayerTestScene.cpp" />
-    <ClCompile Include="Poltergeist.cpp" />
-    <ClCompile Include="PoltergeistBullet.cpp" />
-    <ClCompile Include="PsycokinesisBullet.cpp" />
-    <ClCompile Include="ResultScene.cpp" />
-    <ClCompile Include="RushGhost.cpp" />
-    <ClCompile Include="CarGhost.cpp" />
-    <ClCompile Include="Field.cpp" />
-    <ClCompile Include="Light.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="Player.cpp" />
-    <ClCompile Include="SceneManager.cpp" />
-    <ClCompile Include="StageClearScene.cpp" />
-    <ClCompile Include="TitleScene.cpp" />
-    <ClCompile Include="SurogSakones.cpp" />
-    <ClCompile Include="UI.cpp" />
-    <ClCompile Include="World.cpp" />
+    <ClCompile Include="src\actor\Actor.cpp" />
+    <ClCompile Include="src\ActorManager.cpp" />
+    <ClCompile Include="src\AnimatedMesh.cpp" />
+    <ClCompile Include="src\collider\AttackCollider.cpp" />
+    <ClCompile Include="src\scene\BossTestScene.cpp" />
+    <ClCompile Include="src\collider\BoundingSphere.cpp" />
+    <ClCompile Include="src\ByteBuf.cpp" />
+    <ClCompile Include="src\actor\Camera.cpp" />
+    <ClCompile Include="src\CSVReader.cpp" />
+    <ClCompile Include="src\actor\DeathSmoke.cpp" />
+    <ClCompile Include="src\actor\EPsycokinesisBullet.cpp" />
+    <ClCompile Include="src\actor\ESurogSakones.cpp" />
+    <ClCompile Include="src\Fade.cpp" />
+    <ClCompile Include="src\scene\GameOverScene.cpp" />
+    <ClCompile Include="src\actor\HPBar.cpp" />
+    <ClCompile Include="src\collider\interact_collider.cpp" />
+    <ClCompile Include="src\MapGenerator.cpp" />
+    <ClCompile Include="src\scene\EnemyTestScene.cpp" />
+    <ClCompile Include="src\scene\GamePlayScene.cpp" />
+    <ClCompile Include="src\actor\PaladinSpawn.cpp" />
+    <ClCompile Include="src\Particle.cpp" />
+    <ClCompile Include="src\ParticleManager.cpp" />
+    <ClCompile Include="src\actor\player_ghost.cpp" />
+    <ClCompile Include="src\actor\player_paladin.cpp" />
+    <ClCompile Include="src\actor\NormalGhost.cpp" />
+    <ClCompile Include="src\scene\PlayerTestScene.cpp" />
+    <ClCompile Include="src\actor\Poltergeist.cpp" />
+    <ClCompile Include="src\actor\PoltergeistBullet.cpp" />
+    <ClCompile Include="src\actor\PsycokinesisBullet.cpp" />
+    <ClCompile Include="src\scene\ResultScene.cpp" />
+    <ClCompile Include="src\actor\RushGhost.cpp" />
+    <ClCompile Include="src\actor\CarGhost.cpp" />
+    <ClCompile Include="src\collider\Field.cpp" />
+    <ClCompile Include="src\actor\Light.cpp" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\actor\Player.cpp" />
+    <ClCompile Include="src\scene\SceneManager.cpp" />
+    <ClCompile Include="src\scene\StageClearScene.cpp" />
+    <ClCompile Include="src\scene\TitleScene.cpp" />
+    <ClCompile Include="src\actor\SurogSakones.cpp" />
+    <ClCompile Include="src\UI.cpp" />
+    <ClCompile Include="src\World.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Actor.h" />
-    <ClInclude Include="ActorManager.h" />
-    <ClInclude Include="ClearObj.h" />
-    <ClInclude Include="DamageProp.h" />
-    <ClInclude Include="AnimatedMesh.h" />
-    <ClInclude Include="Assets.h" />
-    <ClInclude Include="AttackCollider.h" />
-    <ClInclude Include="BossTestScene.h" />
-    <ClInclude Include="BoundingSphere.h" />
-    <ClInclude Include="ByteBuf.h" />
-    <ClInclude Include="Camera.h" />
-    <ClInclude Include="CSVReader.h" />
-    <ClInclude Include="DeathSmoke.h" />
-    <ClInclude Include="EPsycokinesisBullet.h" />
-    <ClInclude Include="ESurogSakones.h" />
-    <ClInclude Include="Fade.h" />
-    <ClInclude Include="GameOverScene.h" />
-    <ClInclude Include="HPBar.h" />
-    <ClInclude Include="interact_collider.h" />
-    <ClInclude Include="interact_prop.h" />
-    <ClInclude Include="Line.h" />
-    <ClInclude Include="MapGenerator.h" />
-    <ClInclude Include="EnemyTestScene.h" />
-    <ClInclude Include="GamePlayScene.h" />
-    <ClInclude Include="PaladinSpawn.h" />
-    <ClInclude Include="Particle.h" />
-    <ClInclude Include="ParticleManager.h" />
-    <ClInclude Include="player_ghost.h" />
-    <ClInclude Include="player_paladin.h" />
-    <ClInclude Include="player_info.h" />
-    <ClInclude Include="NormalGhost.h" />
-    <ClInclude Include="PlayerTestScene.h" />
-    <ClInclude Include="Poltergeist.h" />
-    <ClInclude Include="PoltergeistBullet.h" />
-    <ClInclude Include="PsycokinesisBullet.h" />
-    <ClInclude Include="Ray.h" />
-    <ClInclude Include="resource_loader.h" />
-    <ClInclude Include="ResultScene.h" />
-    <ClInclude Include="RushGhost.h" />
-    <ClInclude Include="CarGhost.h" />
-    <ClInclude Include="Field.h" />
-    <ClInclude Include="IScene.h" />
-    <ClInclude Include="IWorld.h" />
-    <ClInclude Include="Light.h" />
-    <ClInclude Include="Player.h" />
-    <ClInclude Include="SceneManager.h" />
-    <ClInclude Include="SceneNull.h" />
-    <ClInclude Include="StageClearScene.h" />
-    <ClInclude Include="thread_pool.h" />
-    <ClInclude Include="TitleScene.h" />
-    <ClInclude Include="SurogSakones.h" />
-    <ClInclude Include="UI.h" />
-    <ClInclude Include="World.h" />
+    <ClInclude Include="src\actor\Actor.h" />
+    <ClInclude Include="src\ActorManager.h" />
+    <ClInclude Include="src\ClearObj.h" />
+    <ClInclude Include="src\DamageProp.h" />
+    <ClInclude Include="src\AnimatedMesh.h" />
+    <ClInclude Include="src\Assets.h" />
+    <ClInclude Include="src\collider\AttackCollider.h" />
+    <ClInclude Include="src\scene\BossTestScene.h" />
+    <ClInclude Include="src\collider\BoundingSphere.h" />
+    <ClInclude Include="src\ByteBuf.h" />
+    <ClInclude Include="src\actor\Camera.h" />
+    <ClInclude Include="src\CSVReader.h" />
+    <ClInclude Include="src\actor\DeathSmoke.h" />
+    <ClInclude Include="src\actor\EPsycokinesisBullet.h" />
+    <ClInclude Include="src\actor\ESurogSakones.h" />
+    <ClInclude Include="src\Fade.h" />
+    <ClInclude Include="src\scene\GameOverScene.h" />
+    <ClInclude Include="src\actor\HPBar.h" />
+    <ClInclude Include="src\collider\interact_collider.h" />
+    <ClInclude Include="src\collider\interact_prop.h" />
+    <ClInclude Include="src\Line.h" />
+    <ClInclude Include="src\MapGenerator.h" />
+    <ClInclude Include="src\scene\EnemyTestScene.h" />
+    <ClInclude Include="src\scene\GamePlayScene.h" />
+    <ClInclude Include="src\actor\PaladinSpawn.h" />
+    <ClInclude Include="src\Particle.h" />
+    <ClInclude Include="src\ParticleManager.h" />
+    <ClInclude Include="src\actor\player_ghost.h" />
+    <ClInclude Include="src\actor\player_paladin.h" />
+    <ClInclude Include="src\actor\player_info.h" />
+    <ClInclude Include="src\actor\NormalGhost.h" />
+    <ClInclude Include="src\scene\PlayerTestScene.h" />
+    <ClInclude Include="src\actor\Poltergeist.h" />
+    <ClInclude Include="src\actor\PoltergeistBullet.h" />
+    <ClInclude Include="src\actor\PsycokinesisBullet.h" />
+    <ClInclude Include="src\Ray.h" />
+    <ClInclude Include="src\resource_loader.h" />
+    <ClInclude Include="src\scene\ResultScene.h" />
+    <ClInclude Include="src\actor\RushGhost.h" />
+    <ClInclude Include="src\actor\CarGhost.h" />
+    <ClInclude Include="src\collider\Field.h" />
+    <ClInclude Include="src\scene\IScene.h" />
+    <ClInclude Include="src\IWorld.h" />
+    <ClInclude Include="src\actor\Light.h" />
+    <ClInclude Include="src\actor\Player.h" />
+    <ClInclude Include="src\scene\SceneManager.h" />
+    <ClInclude Include="src\scene\SceneNull.h" />
+    <ClInclude Include="src\scene\StageClearScene.h" />
+    <ClInclude Include="src\thread_pool.h" />
+    <ClInclude Include="src\scene\TitleScene.h" />
+    <ClInclude Include="src\actor\SurogSakones.h" />
+    <ClInclude Include="src\UI.h" />
+    <ClInclude Include="src\World.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Shader\Paladin.frag" />
